# aruco-grasp-annotator

./: .gitignore  =1.3.0  LICENSE  README.md  UNITS_AND_COORDINATE_SYSTEMS.md  pyproject.toml  refilter_all.py
.cursor/: mcp.json
assets/input/: gripper.json  models  parts.json
data/: fmb_assembly.json  fmb_assembly1.json  fmb_assembly2.json  fmb_assembly3.json
data/aruco/: base_scaled70_aruco.json  fork_orange_scaled70_aruco.json  fork_yellow_aruco.json  fork_yellow_scaled70_aruco.json  line_brown_aruco.json  line_brown_scaled70_aruco.json  line_green_aruco.json  line_red_scaled70_aruco.json
data/grasp/: fork_orange_grasp_points_all_markers.json  fork_orange_scaled70_grasp_points_all_markers.json  fork_yellow_grasp_points_all_markers.json  fork_yellow_scaled70_grasp_points_all_markers.json  hex_blue_grasp_points_all_markers.json  hex_red_grasp_points_all_markers.json  inverted_u_brown_grasp_points_all_markers.json  inverted_u_yellow_grasp_points_all_markers.json  line_brown_grasp_points_all_markers.json  line_brown_scaled70_grasp_points_all_markers.json  line_green_grasp_points_all_markers.json  line_red_grasp_points_all_markers.json  line_red_scaled70_grasp_points_all_markers.json  u_brown_grasp_points_all_markers.json  u_green_grasp_points_all_markers.json  u_orange_grasp_points_all_markers.json
data/grasp_candidates/: fork_orange_grasp_candidates.json  fork_orange_scaled70_grasp_candidates.json  fork_yellow_grasp_candidates.json  fork_yellow_scaled70_grasp_candidates.json  hex_blue_grasp_candidates.json  hex_red_grasp_candidates.json  inverted_u_brown_grasp_candidates.json  inverted_u_yellow_grasp_candidates.json  line_brown_grasp_candidates.json  line_brown_scaled70_grasp_candidates.json  line_green_grasp_candidates.json  line_red_grasp_candidates.json  line_red_scaled70_grasp_candidates.json  u_brown_grasp_candidates.json  u_green_grasp_candidates.json  u_orange_grasp_candidates.json
data/grasp_points/: fork_orange_grasp_points.json  fork_yellow_grasp_points.json  hex_blue_grasp_points.json  hex_red_grasp_points.json  inverted_u_brown_grasp_points.json  inverted_u_yellow_grasp_points.json  line_brown_grasp_points.json  line_green_grasp_points.json  line_red_grasp_points.json  u_brown_grasp_points.json  u_green_grasp_points.json  u_orange_grasp_points.json
src/wireframe_exporter/: README.md  WIREFRAME_EXPORT_README.md  __init__.py  gui_app.py  main.py  pyproject.toml
src/wireframe_exporter/examples/: fork_orange_scaled70_ v2_aruco_annotations.json  fork_orange_wireframe.csv
src/wireframe_exporter/gui/: __init__.py  main_window.py
src/wireframe_exporter/scripts/: __init__.py  export_wireframe.py  plot_wireframe_example.py
utils/: add_aruco_isaacsim.py  object_assembly_isaacsim.py  set_object_physics_isaacsim.py  set_rotation_scaling_isaacsim.py  set_sdf_collider_isaacsim.py
(+272 files in other folders)
