[project]
name = "aruco-grasp-annotator"
version = "0.1.0"
description = "3D CAD annotation tool for placing ArUco markers on objects"
readme = "README.md"
requires-python = ">=3.9,<3.13"
authors = [
    {name = "ArUco Annotator", email = "user@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "open3d>=0.17.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "trimesh>=4.0.0",
    "matplotlib>=3.7.0",
    "python-json-logger>=2.0.0",
    "opencv-contrib-python>=4.11.0.86",
    "reportlab>=4.0.0",
    "fastapi>=0.118.0",
    "uvicorn>=0.37.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.scripts]
aruco-annotator = "aruco_annotator.main:main"
assembly-app = "assembly_app.main:main"
grasp-points-annotator = "grasp_points_annotator.main:main"
symmetry-exporter = "symmetry_exporter.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
