[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wireframe-exporter"
version = "1.0.0"
description = "A standalone application for exporting 3D mesh wireframe data to various formats"
authors = [
    {name = "ArUco Grasp Annotator Team"}
]
readme = "WIREFRAME_EXPORT_README.md"
requires-python = ">=3.8"
dependencies = [
    "open3d>=0.17.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.3.0",
    "PyQt6>=6.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.scripts]
wireframe-export = "wireframe_exporter.scripts.export_wireframe:main"
wireframe-plot = "wireframe_exporter.scripts.plot_wireframe_example:main"
wireframe-gui = "wireframe_exporter.gui.main_window:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["wireframe_exporter*"]

[tool.setuptools.package-data]
wireframe_exporter = ["*.md"]
